# aurora_core

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  package.xml
Aurora_Core/nbproject/: configurations.xml  project.xml
Aurora_Core/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml
aurora_core/nbproject/: configurations.xml  project.xml
aurora_core/nbproject/private/: Default.properties  configurations.xml  private.xml
src/: AutoMission.cpp  AutoMission.h  Autopilot.cpp  Autopilot.h  Behaviours.cpp  Behaviours.h  Core.cpp  Core.h  CoreStarter.cpp  CoreStarter.h  Counter.cpp  Counter.h  Geometry.cpp  Geometry.h  GpsCoordination.cpp  GpsCoordination.h  Library.cpp  Library.h  MavRosSetStreamRate.cpp  MavRosSetStreamRate.h  MavrosGlobalPosition.cpp  MavrosGlobalPosition.h  SharedMemory.cpp  SharedMemory.h  SubscribeMavrosState.cpp  SubscribeMavrosState.h  UICmdParser.cpp  UICmdParser.h  UICmdResponse.cpp  UICmdResponse.h  UserInterface.cpp  UserInterface.h  WayPoint.cpp  WayPoint.h  WorldModel.cpp  WorldModel.h  main.cpp  mavros_setstreamrate.cpp  mavros_setstreamrate.h  shared_memory.cpp  (+3 more)
